--- a/EmpInfo/Views/Apply/BeginApplyXA.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplyXA.cshtml
@@ -269,6 +269,14 @@
             </div>
             <div class="b-div">
                 <span class="b-label">
+                    邮箱地址:
+                </span>
+                <span class="b-input">
+                    <input type="text" class="form-control" name="email_addr" placeholder="填写邮箱地址" required />
+                </span>
+            </div>
+            <div class="b-div">
+                <span class="b-label">
                     申请部门:
                 </span>
                 <span class="b-input">
@@ -461,11 +469,15 @@
                 管理部会签（项目大类负责人、申请部门总经理、分摊部门总经理）--->审核部最终确认--->申请人验收项目--->设备负责人验收--->
                 生产主管验收--->部门总经理验收--->信息管理部验收（网络类）--->项目大类负责人验收--->流程结束。
                 <br/>
-                2. 如果部门有设置CEO，那么部门总经理审批后，采购部接单前，系统会推送通知给CEO。
+                2. 审核部要求：2021-08-25之后提交的项目单申请，不需走验收部分审批流程，改回走纸质验收。
                 <br/>
-                3. 申请人上传施工清单，设备科负责人处理后，采购部上传报价单前，系统会推送通知给项目大类负责人。
+                3. 如果部门有设置CEO，那么部门总经理审批后，采购部接单前，系统会推送通知给CEO。
                 <br/>
-                4. 审核部最终确认后，申请人验收项目前，系统会推送通知给采购部接单员。
+                4. 申请人上传施工清单，设备科负责人处理后，采购部上传报价单前，系统会推送通知给项目大类负责人。
+                <br/>
+                5. 审核部最终确认后，申请人验收项目前，系统会推送通知给采购部接单员。
+                <br/>
+                6. 如对此业务流程有疑问，或需要增加部门，请联系审核部陈禹健（chenyujian@trulyopto.cn）或陈俊翰（chenjunhan@trulyopto.cn）。
             </p>
         </div>
     </div>
