--- a/EmpInfo/Views/Apply/CheckDPApply.cshtml
+++ b/EmpInfo/Views/Apply/CheckDPApply.cshtml
@@ -127,7 +127,7 @@
                             @form.repair_type
                         </span>
                     </div>
-                    @if (form.repair_type.Equals("预约维修")) {
+                    @if (form.repair_time != null) {
                         <div class="col-xs-12 col-md-4 col-sm-6">
                             <span class="b-label">
                                 维修时间:
