--- a/EmpInfo/Views/ApplyExtra/CheckMTClasses.cshtml
+++ b/EmpInfo/Views/ApplyExtra/CheckMTClasses.cshtml
@@ -149,7 +149,7 @@
                         <div style="margin-top:6px;">科室名称：</div>
                         <input type="text" class="form-control" name="class_name" placeholder="录入科室名称" />
                         <div style="margin-top:6px;">负责人：</div>
-                        <input type="text" class="form-control select-user" name="leader" placeholder="选择负责人" />
+                        <input type="text" class="form-control select-user" name="leader" data-user-num="3" placeholder="选择负责人" />
                         <div style="margin-top:6px;">成员：</div>
                         <textarea class="form-control select-user" rows="6" name="member" data-user-num="20" placeholder="最多可以设置20人"></textarea>
                     </form>
