--- a/EmpInfo/Views/Report/ALReport.cshtml
+++ b/EmpInfo/Views/Report/ALReport.cshtml
@@ -269,7 +269,8 @@
         <ol class="breadcrumb" style="margin:0;padding:0; background-color:transparent;">
             <li><span class="glyphicon glyphicon-hand-right"></span></li>
             <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
-            <li><a href="@Url.Content("~/Home/WorkGroupIndex")">智慧办公集合</a></li>
+            <li><a href="@Url.Content("~/Home/WorkGroupIndex")">智慧办公集合</a></li>            
+            <li><a href="../Apply/ApplyIndex?billType=AL">请假申请单</a></li>
             <li class="active">请假报表</li>
         </ol>
     </div>
