--- a/EmpInfo/Views/Report/SPReport.cshtml
+++ b/EmpInfo/Views/Report/SPReport.cshtml
@@ -145,7 +145,7 @@
             <li><span class="glyphicon glyphicon-hand-right"></span></li>
             <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
             <li><a href="@Url.Content("~/Home/WorkGroupIndex")">智慧办公集合</a></li>
-            <li><a href="@Url.Content("~/Apply/ApplyIndex?billType=SP")">寄/收件申请</a></li>
+            <li><a href="@Url.Content("~/Apply/ApplyIndex?billType=SP")">寄件申请</a></li>
             <li class="active">查询报表</li>
         </ol>
     </div>
