--- a/EmpInfo/Views/Report/XBReport.cshtml
+++ b/EmpInfo/Views/Report/XBReport.cshtml
@@ -145,7 +145,7 @@
             <li><span class="glyphicon glyphicon-hand-right"></span></li>
             <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
             <li><a href="@Url.Content("~/Home/WorkGroupIndex")">智慧办公集合</a></li>
-            <li><a href="@Url.Content("~/Apply/ApplyIndex?billType=XA")">项目单申请流程</a></li>
+            <li><a href="@Url.Content("~/Apply/ApplyIndex?billType=XB")">设备类申请流程</a></li>
             <li class="active">查询报表</li>
         </ol>
     </div>
