--- a/EmpInfo/Views/Apply/CheckXAApply.cshtml
+++ b/EmpInfo/Views/Apply/CheckXAApply.cshtml
@@ -147,6 +147,14 @@
         </div>
         <div class="b-div">
             <span class="b-label">
+                邮箱地址:
+            </span>
+            <span class="b-input">
+                @m.bill.email_addr
+            </span>
+        </div>
+        <div class="b-div">
+            <span class="b-label">
                 申请时间:
             </span>
             <span class="b-input">
