--- a/EmpInfo/Views/ApplyExtra/XCAuditorSetting.cshtml
+++ b/EmpInfo/Views/ApplyExtra/XCAuditorSetting.cshtml
@@ -1,6 +1,5 @@
 ﻿@using EmpInfo.Models;
 @section CSS{
-    <link rel="stylesheet" href="@Url.Content("~/Content/bootstrap-datetimepicker.min.css")" />
     <link rel="stylesheet" href="@Url.Content("~/Content/bootstrap-table/bootstrap-table.min.css")" />
     <style type="text/css">
         .lbText {
@@ -31,21 +30,11 @@
             };
         }
     </script>
-    <script src="@Url.Content("~/Scripts/bootstrap-datetimepicker.min.js")"></script>
-    <script src="@Url.Content("~/Scripts/bootstrap-datetimepicker.zh-CN.js")"></script>
     <script src="@Url.Content("~/Content/bootstrap-table/bootstrap-table.js")"></script>
     <script src="@Url.Content("~/Content/bootstrap-table/locale/bootstrap-table-zh-CN.min.js")"></script>
     <script src="@Url.Content("~/Scripts/myUserSelecter.js")"></script>
     <script>
-        $(function () {
-            $(".form_date").datetimepicker({
-                language: 'zh-CN',
-                format: "yyyy-mm",
-                autoclose: true,
-                todayBtn: true,
-                startView: 3,
-                minView: 3
-            });
+        $(function () {            
 
             $("#checkBt").on("click", function () {
                 $.post("GetXCAuditors", {
@@ -83,35 +72,23 @@
             columns: [
                 {
                     radio: true
-                },
-                {
-                    field: "year_month",
-                    title: "年月份",
-                    width: "15%"
-                }, {
+                },{
                     field: "company",
                     title: "公司",
-                    width: "15%"
+                    width: "20%"
                 }, {
                     field: "dep_name",
                     title: "部门名称",
-                    width: "20%"
+                    width: "30%"
                 },
                 {
                     field: "manager",
                     title: "总经理",
-                    width: "20%"
-                }, {
-                    field: "month_target",
-                    title: "本月委外目标",
-                    width: "15%",
-                    formatter: function (value, row, index, field) {
-                        return utils.parseDecimalToThousandBit(value);
-                    }
+                    width: "30%"
                 }, {
                     field: "create_user",
                     title: "创建人",
-                    width: "15%"
+                    width: "20%"
                 }
             ]
         });
@@ -155,12 +132,8 @@
             });
 
             $("#saveTb1FormBt").on("click", function () {
-                var obj = utils.getFormObj($("#tb1Form"));
-                if (!utils.testIsInt(obj.month_target)) {
-                    toastr.error("目标必须输入整数");
-                    return;
-                }
-                if (obj.year_month == "" || obj.dep_name == "" || obj.manager == "" || obj.month_target == "" || obj.company == "") {
+                var obj = utils.getFormObj($("#tb1Form"));                
+                if (obj.dep_name == "" || obj.manager == "" || obj.company == "") {
                     toastr.error("缺少值");
                     return;
                 }
@@ -176,19 +149,6 @@
                 });
             });
 
-            $("#tb1CopyBt").on("click", function () {
-                openConfirmDialog("确定要复制吗？", function () {
-                    $.post("CopyXCPreMonthAuditor", {}, function (data) {
-                        if (!data.suc) {
-                            toastr.error(data.msg);
-                        } else {
-                            toastr.success(data.msg);
-                            $("#checkBt").trigger("click");
-                        }
-                    })
-                });
-            });
-
         })
     </script>
 
@@ -201,13 +161,13 @@
             <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
             <li><a href="@Url.Content("~/Home/WorkGroupIndex")">智慧办公集合</a></li>
             <li><a href="@Url.Content("~/Apply/ApplyIndex?billType=XC")">委外加工流程</a></li>
-            <li class="active">部门总经理与目标维护</li>
+            <li class="active">部门总经理维护</li>
         </ol>
     </div>
     <div class="panel-body">
         <form id="fm">
             <div class="row" style="margin-bottom:6px;">
-                <div class="col-xs-12 col-sm-6 col-md-4">
+                @*<div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="lbText">年月份从：</div>
                     <div class="input-group date form_date" style="margin:6px 0;" id="fromDatePicker1">
                         <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
@@ -220,7 +180,7 @@
                         <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
                         <input class="form-control" type="text" id="toDate" autocomplete="off" value="@DateTime.Now.AddMonths(1).ToString("yyyy-MM")" />
                     </div>
-                </div>
+                </div>*@
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="lbText">部门：</div>
                     <input type="text" class="form-control" id="depName" style="margin:6px 0;" />
@@ -235,7 +195,6 @@
             <button class="btn btn-success" id="tb1AddBt" style="margin-top:10px;"><i class="fa fa-plus"></i> 增加</button>
             <button class="btn btn-primary" id="tb1ModifyBt" style="margin-top:10px;"><i class="fa fa-edit"></i> 修改</button>
             <button class="btn btn-danger" id="tb1RemoveBt" style="margin-top:10px;"><i class="fa fa-plus"></i> 删除</button>
-            <button class="btn btn-warning" id="tb1CopyBt" style="margin-top:10px;"><i class="fa fa-copy"></i> 复制上月配置到本月</button>
         </div>
         <table id="tb1"></table>
 
@@ -254,11 +213,11 @@
             <div class="modal-body">
                 <form id="tb1Form">
                     <input type="hidden" name="id" data-value="0" />
-                    <div>年月份：</div>
+                    @*<div>年月份：</div>
                     <div class="input-group date form_date" style="margin:6px 0;">
                         <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
                         <input class="form-control" type="text" name="year_month" autocomplete="off" />
-                    </div>
+                    </div>*@
                     <div>公司：</div>
                     <select class="form-control" name="company"  style="margin-top:4px;">
                         <option value="">----下拉选择公司----</option>
@@ -273,8 +232,8 @@
                     <input type="text" class="form-control" name="dep_name" style="margin-top:4px;" />
                     <div>总经理：</div>
                     <input type="text" class="form-control user-select" name="manager" style="margin-top:4px;" />
-                    <div>本月委外目标(元):</div>
-                    <input type="text" class="form-control" name="month_target" style="margin-top:4px;" />
+                    @*<div>本月委外目标(元):</div>
+                    <input type="text" class="form-control" name="month_target" style="margin-top:4px;" />*@
                 </form>
             </div>
             <div class="modal-footer">
