--- a/EmpInfo/Views/Home/WorkGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/WorkGroupIndex.cshtml
@@ -123,12 +123,19 @@
                     <img src="@Url.Content("~/Content/images/xb.png")" alt="设备申请单" class="center-block" />
                     <p class="text-center">设备类申请</p>
                 </a>
-            </div>*@
+            </div>
 
             <div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="@Url.Content("~/Apply/ApplyIndex?billType=XC")">
                     <img src="@Url.Content("~/Content/images/xc.png")" alt="委外加工申请" class="center-block" />
                     <p class="text-center">委外加工申请</p>
+                </a>
+            </div>*@
+
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=XD")">
+                    <img src="@Url.Content("~/Content/images/xd.png")" alt="委外超时申请" class="center-block" />
+                    <p class="text-center">委外超时申请</p>
                 </a>
             </div>
 
@@ -149,7 +156,7 @@
             <div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="@Url.Content("~/Apply/ApplyIndex?billType=SP")">
                     <img src="@Url.Content("~/Content/images/cargo.png")" class="center-block" />
-                    <p class="text-center" data-key="寄件,快递">寄/收件流程</p>
+                    <p class="text-center" data-key="寄件,快递">寄件流程</p>
                 </a>
             </div>
             <div class="col-xs-4 col-sm-3 col-md-2">
