--- a/EmpInfo/Views/Shared/_Layout.cshtml
+++ b/EmpInfo/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
     @RenderSection("CSS", false)
     <style type="text/css">
         body, div, p, h1, h2, h3, h4, h5, h6, legend, input, button, a, label, span,pre {
-            font-family: 'Microsoft YaHei','Courier New',Arial;
+            font-family: 'Microsoft YaHei','PingFang SC', 'Courier New',Arial;
         }
         .container {
             padding:0;
